--- a/bootstrap_v1/assets/css/nook.css
+++ b/bootstrap_v1/assets/css/nook.css
@@ -52,14 +52,14 @@ background-image: linear-gradient(to bottom, #40C0FF  0%, #36A2D8 100%);
 }
 
 h4 {
-    color: #FF4500;
+    color: #FA8B2F;
     font-family: "Patrick Hand", cursive, sans-serif;
     font-weight: bold;
 }
 h2 {
     font-size: 35px;
     font-family: "Patrick Hand", cursive, sans-serif;   
-    color: #FF4500;
+    color: #FA8B2F;
     font-weight: bolder;
 }
 p {
@@ -76,7 +76,7 @@ ul {
 }
 
 .left-bumper {
-    margin-left: 35px;
+    margin-left: 5px;
 }
 
 .family-img {
@@ -88,11 +88,30 @@ ul {
     margin-top: 6px;
 }
 
-.call-to-book{
+.highlights{
     height: 370px
     
 }
 
 .info-block {
-    margin-left: 35px;
+    margin-left: 15px;
+}
+
+.party-info {
+    margin-left: 110px;
+}
+
+.responsiveCalandMap {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+}
+
+.responsiveCalandMap iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
